@@ -44,8 +44,11 @@ collectd (4.7.2-1) unstable; urgency=low
       required by the java plugin.
   * New debconf template translations:
     - cs.po, thanks to Martin Sin (Closes: #534206).
+  * debian/control, debian/rules:
+    - No not limit the libvirt plugin to amd64, i386, powerpc - libvirt-dev
+      seems to be available on all architectures now.
 
- -- Sebastian Harl <tokkee@debian.org>  Tue, 28 Jul 2009 17:00:41 +0200
+ -- Sebastian Harl <tokkee@debian.org>  Tue, 28 Jul 2009 17:42:11 +0200
 
 collectd (4.6.3-1) unstable; urgency=low
 
